@@ -1,6 +1,9 @@
 Version 1.6
 ------------------------------------------------------------------------------
 
+* `rbind.fill` now treats 1d arrays in the same way as `rbind` (i.e. it turns
+  them into ordinary vectors)
+
 * fix bug in rename when renaming multiple columns
 
 Version 1.5 (2011-03-02)
